@@ -1442,8 +1442,19 @@ function require_valgrind() {
 	local ret=$?
 	restore_exit_on_error
 	if [ $ret -ne 0 ]; then
-		msg "$UNITTEST_NAME: SKIP valgrind required"
-		exit 0
+		# FORCE_CHECK_TYPE is basically a copy of CHECK_TYPE as it is provided by force-enable.
+		# This copy allowed us to workaround the overcomplicated legacy Valgrind processing logic
+		# and here just check whether any Valgrind tool has been force-enabled or not.
+		# Lack of Valgrind when it is force-enabled causes test failure.
+		# Lack of Valgrind, when it was just required by the given test, causes a skip.
+		if [ "$FORCE_CHECK_TYPE" != "none" ]; then
+			msg=$(interactive_red STDOUT "FAIL:")
+			echo -e "$UNITTEST_NAME: $msg valgrind not installed"
+			exit 1
+		else
+			msg "$UNITTEST_NAME: SKIP valgrind required"
+			exit 0
+		fi
 	fi
 }
 
